    the number of rows and columns on the TTF screen
    dynamically using CONFIG command, e.g. "config -set
    ttf.font=test", "config -set ttf.lins=30", and
    "config -set ttf.cols=100". (Wengier)
  - You can now supply a ZIP/7Z file as a parameter to
    DOSBox-X directly so that it will be mounted as C:
    drive when DOSBox-X starts. (Wengier)
  - Fixed an issue that the DOSBox-X window size may be
    incorrect when restoring from a maximized window in
    the SDL2 builds. (Wengier)
  - Fixed incorrect behavior for handling trap flags
    in the dynamic core. (koolkdev)
  - Fixed that the menu option "Select OpenGL (GLSL)
    shader.." not working properly sometimes. (Wengier)
  - Fixed Ctrl+C not working in GNU ed. (Wengier)
  - Fixed large ISO images (>2GB) unable to be mounted
    using IMGMOUNT command. (Wengier)
  - Improved the speed of the internal Voodoo hardware
    emulation for running games like Tomb Raider 3dfx
    when using the Direct3D output. (Wengier)
  - Improved OPL3Duo support, such as adding a buffer
    thread to get rid of slowdowns & breakups in audio
    playback when using the board. (DhrBaksteen)
  - Updated the Tiny File Dialog library to the latest
    version v3.8.5, which fixes issues such as the
    compatibility problem with Windows XP. (Wengier)
  - Updated FLAC and WAV CD-DA decoder libraries to the
    latest versions (0.12.26 and 0.12.18 respectively;
    per David Reid). (Wengier)
  - Integrated SVN commits (Allofich)
    - r4392: Improve capturing of Zeliard and fix a
    few percussion-related capturing problems as well.
    - r4393: Remove video page check when drawing
    internal mouse pointer, as the BIOS current page
    is not updated in some cases. Fixes QQP games: Lost
    Admiral, Conquered Kingdoms, and Solitaire's
    Journey. Also be a bit smarter about enabling
    autolock, supporting more cases where the mouse
    is used for input without resetting it.

0.83.9