@@ -1753,6 +1753,8 @@ timeout     = 0
 #DOSBOX-X-ADV:#                                                     Possible values: auto, off, msdos2, msdos5, direct.
 #                                            share: Report SHARE.EXE as resident. This will allow file locking to be performed, although not all SHARE functions are emulated.
 #                                file access tries: If a positive integer is set, DOSBox-X will try to read/write/lock files directly on mounted local drives for the specified number of times before failing on the Windows system.
+#                               network redirector: Report DOS network redirector as resident. This will allow the host name to be returned unless the secure mode is enabled.
+#                                                     Set either "ipx=true" in [ipx] section or "ne2000=true" in [ne2000] section for a full network redirector environment.
 #DOSBOX-X-ADV:#              minimum dos initial private segment: In non-mainline mapping mode, where DOS structures are allocated from base memory, this sets the
 #DOSBOX-X-ADV:#                                                     minimum segment value. Recommended value is 0x70. You may reduce the value down to 0x50 if freeing
 #DOSBOX-X-ADV:#                                                     up more memory is important. Set to 0 for default.
@@ -1913,6 +1915,7 @@ ansi.sys                                         = true
 #DOSBOX-X-ADV:cpm compatibility mode                           = auto
 share                                            = true
 file access tries                                = 0
+network redirector                               = true
 #DOSBOX-X-ADV:minimum dos initial private segment              = 0
 #DOSBOX-X-ADV:minimum mcb segment                              = 0
 minimum mcb free                                 = 0
