@@ -677,6 +677,8 @@ timeout     = 0
 #                                    NOTE: This option has no effect in PC-98 mode where MS-DOS systems integrate ANSI.SYS into the DOS kernel.
 #                           share: Report SHARE.EXE as resident. This will allow file locking to be performed, although not all SHARE functions are emulated.
 #               file access tries: If a positive integer is set, DOSBox-X will try to read/write/lock files directly on mounted local drives for the specified number of times before failing on the Windows system.
+#              network redirector: Report DOS network redirector as resident. This will allow the host name to be returned unless the secure mode is enabled.
+#                                    Set either "ipx=true" in [ipx] section or "ne2000=true" in [ne2000] section for a full network redirector environment.
 #                minimum mcb free: Minimum free segment value to leave free. At startup, the DOS kernel will allocate memory
 #                                    up to this point. This can be used to deal with EXEPACK issues or DOS programs that cannot
 #                                    be loaded too low in memory. If you want more free conventional memory to be reported,
@@ -737,6 +739,7 @@ hma                             = true
 ansi.sys                        = true
 share                           = true
 file access tries               = 0
+network redirector              = true
 minimum mcb free                = 0
 dosv                            = off
 ems                             = true
